2022-03-22  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-elinks.el (ee-url-at-point): new function.

2022-03-21  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-plinks.el (find-osm-str): new function.

	* eev-tlinks.el (find-osm-links): include a link with
	`find-osm-str'.

2022-03-20  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-eval.el (ee-goto-eol): new function.
	(ee-eval-sexp-eol): use `ee-goto-eol'.

2022-03-18  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-code.el (ee-find-grep): use `find-dbsw-call'.

	* eev-helpful.el: new file.

	* eev-elinks.el (find-evariable-links): added a link to helpful.
	(ee-find-efunction-links): added a link to helpful.

	* eev-hlinks.el (ee-helpful-bufferp): new function.
	(ee-fhl-main-program): use `ee-helpful-bufferp'.

	* eev-plinks.el (find-osm): use `find-dbsw-call'.

2022-03-17  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-blinks.el (find-dbsw-call): new function.

2022-03-16  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-blinks.el (ee-find-eww-search-yes, ee-find-eww-search-for):
	new variables.
	(ee-find-eww-search): new function.
	(find-eww): set the variables for `ee-find-eww-search'.

	* eev-plinks.el (find-osm): new function.

	* eev-hlinks.el (ee-fhl-main-program): added support for osm.
	(ee-osm-bufferp): new function.

	* eev-tlinks.el (find-osm-links, ee-find-osm-links, ee-osm-lat)
	(ee-osm-lon, ee-osm-zoom): new functions.

2022-03-13  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-template0.el (ee-template0-lex, ee-template00-lex)
	(ee-template000-lex): new functions.

2022-03-10  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-code.el (eev-version): new function.

2022-03-07  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-kla.el: rewritten almost completely.

2022-03-03  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-eev-quick-intro): rewrote the section "10.2.
	Generating short hyperlinks to info nodes" following some ideas
	by Bruno Macedo (thanks!=)).
